Fix: [Algorithm] Rename docs

--- a/algorithm/Graph-traversal-DFS.ipynb
+++ b/algorithm/Graph-traversal-DFS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DFS traversal - Example Code"
+    "### Graph traversal - Example Code"
    ]
   },
   {
